# temp-disc-pred

./: FeatureEngineer.py  analyze_features.py  config.toml  main.py  model_version.txt  predictions_with_version.csv  pyproject.toml  tools.py  train_and_save_model.py
app/: main.py  pyproject.toml
data/: 301A_2ND_CLEAN.csv
model/: model_version.txt  train_and_save_model.py
src/: model_version.txt  tools.py  train_and_save_model.py
src/data/: 301A_1ST_CLEAN.csv
src/model/: metrics.json  model_version.txt
