[project]
name = "temp-disc-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "app",
]
